--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     </li>
                     <li>
                         Planned, executed and coordinated large-scale projects aimed at improving overall quality of
-                        labour resources, processes and assets for
+                        labour resources, processes and assets for the plant
                     </li>
 
                 </ul>
