--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         monitored and minimised process deviations.
                     </li>
                     <li>
-                        Monitored quality performance in unit operations;
+                        Monitored quality performance in unit operations.
                     </li>
                 </ul>
             </div>
