--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </div>
         <div class="row">
             <div class="col-sm">
-                L'Oreal <i>[Business process design/ management]</i>
+                IBPL/ L'Oreal <i>[Business process design/ management]</i>
             </div>
         </div>
         <div class="row  border-bottom">
