--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
             <div class="col-sm">
                 <ul>
                     <li>
+                        <strong>Hyperledger Smart Contracts</strong><a target="_blank" href="https://github.com/hitwill/device-contract"> Smart contracts</a>,
+                        to manage ownership and transfer of mobile devices on the Hyperledger blockchain.
+                        <span class="text-muted">(2019).</span>
+                    </li>
+                    <li>
                         <strong>Mobile games on the blockchain</strong><a target="_blank" href="https://catpurse.page.link/play"> Catpurse</a>,
                         a fun game built on Unity3D, that  connects game-play to blockchain purchases.
                         <span class="text-muted">(2019).</span>
@@ -244,6 +249,9 @@
         <div class="row  border-bottom">
             <div class="col-sm">
                 <ul>
+                    <li>
+                        Smart contracts on IBM's Hyperledger Blockchain for [Fairom](https://www.fairom.com/)
+                    </li>
                     <li>
                         Several projects and tutorials for the Kin Foundation.
                     </li>
