--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="col-sm">
                 <ul>
                     <li>
-                        Smart contracts on IBM's Hyperledger Blockchain for [Fairom](https://www.fairom.com/)
+                        Smart contracts on IBM's Hyperledger Blockchain for <a target="_blank" href="https://www.fairom.com/"> Fairom</a>
                     </li>
                     <li>
                         Several projects and tutorials for the Kin Foundation.
