--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
                     <li>
                         Sample client apps <a target="_blank" href="https://github.com/hitwill/kin-sdk-unity-tutorial">
                             in Unity3D
-                        </a>
+                        </a>  for dev training.
                     </li>
                     <li>
                         Sample server codes in <a target="_blank" href="https://github.com/hitwill/kin-nodejs-server">
-                            Node.js
+                            Node.js for dev training.
                         </a> and <a target="_blank" href="https://github.com/hitwill/kin-nodejs-server">
                             Python
-                        </a>
+                        </a>  for dev training.
                     </li>
                 </ul>
             </div>
