--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     </li>
                     <li>
                         Sample server codes in <a target="_blank" href="https://github.com/hitwill/kin-nodejs-server">
-                            Node.js for dev training.
+                            Node.js
                         </a> and <a target="_blank" href="https://github.com/hitwill/kin-nodejs-server">
                             Python
                         </a>  for dev training.
