--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="row  border-bottom">
             <div class="col-sm text-center text-muted mt-2">
-                <h6 class=" text-center text-muted">PHP/ Node.JS expert</h6>
+                <h6 class=" text-center text-muted">Software Engineer/ Process expert</h6>
             </div>
         </div>
         <div class="row">
@@ -89,7 +89,7 @@
         </div>
         <div class="row  border-bottom">
             <div class="col-sm text-muted">
-                PHP/ HTML5/ MySQL/ PostgreSQL<br />
+                PHP/ HTML5/ MySQL/ PostgreSQL, Mongo<br />
                 Javascript/ Node.js<br />
                 Javascript framworks (jQuery, MooTools, etc) <br />
                 CSS frameworks (Bootstrap, etc) <br />
@@ -203,20 +203,6 @@
                         <strong>Forex trading signals</strong> Software using MetaTrader APIs to read and
                         process trading signals. <span class="text-muted">(Jan 2012 - Jul 2013)</span>
                     </li>
-                    <li>
-                        <strong><a target="_blank" href="http://www.milelehotels.com/">Milele Hotels</a></strong>This role involved creating and running a website for a travel resort.
-                        This was basically a simple template system with minor modifications. <span class="text-muted">(Jan 2011 - Sep 2011)</span>
-                    </li>
-                    <li>
-                        <strong>PeopleSkii</strong> An online dating website that used Facebook APIs to match users based on interests.
-                        <span class="text-muted">(Feb 2008 - Nov 2010)</span>
-                    </li>
-                    <li>
-                        <strong><a target="_blank" href="http://www.imperialtextile.com">Imperial Inc</a></strong> This role involved creating enterprise
-                        administration software (back end and front end), for handling online sales, stocks, accounts, etc. for the company.
-                        The role also involved creating multiple websites for the company. e.g.
-                        <a target="_blank" href="https://www.uniformsandlinens.com">Uniforms&Linens</a> <span class="text-muted">(Jan 2004 - Oct 2007)</span>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -231,6 +217,38 @@
                 <h6 class=" text-center text-muted">CAREER CHRONOLOGY</h6>
             </div>
         </div>
+
+        <!-- Start job -->
+        <div class="row">
+            <div class="col-sm">
+                SOFTWARE ENGINEER
+            </div>
+            <div class="col-sm text-right">
+                2020-Current
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                Lend Capital <i>[PHP, Node.js, MySQL, GraphQL, MongoDB, etc]</i>
+            </div>
+        </div>
+        <div class="row  border-bottom">
+            <div class="col-sm">
+                Part of a team that designs, develops and maintains B2B software. Including:
+                <ul>
+                    <li>
+                        API producers and consumers
+                    </li>
+                    <li>
+                        Microservices on Amazon Lamda
+                    </li>
+                    <li>
+                        Front end technologies like React and ViewJs
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- End job -->
 
         <!-- Start job -->
         <div class="row">
@@ -284,7 +302,7 @@
         <!-- Start job -->
         <div class="row">
             <div class="col-sm">
-                PROGRAMMER/ DATA MANAGER
+                DATA MANAGER/ PROGRAMMER
             </div>
             <div class="col-sm text-right">
                 2015-2017
