--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
                  <blockquote class="blockquote text-right">
                     <p class="mb-0 text-right align-middle">
-                        <i>"His technical ability, eye for detail and overall understanding of operation are assets to any organization. 
+                        <i>"His technical ability, eye for detail and overall understanding of operations are assets to any organization. 
                         <br />He is able to resolve difficult problems, with his hands on approach and out of the box thinking."</i>
                         <footer class="blockquote-footer"><a target="_blank" href="https://www.linkedin.com/in/chandrabenerjee/">Chandra Banerjee</a> <cite title="Source Title">Digital Marketer at Northcote South</cite></footer>
                     </p>
