--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="row  border-bottom">
             <div class="col-sm text-center text-muted mt-2">
-                <h6 class=" text-center text-muted">Software Engineer/ Process expert</h6>
+                <h6 class=" text-center text-muted">Software Engineer/ Process Expert</h6>
             </div>
         </div>
         <div class="row">
@@ -343,18 +343,49 @@
             </div>
         </div>
         <!-- End job -->
-        <!-- Start job -->
-        <div class="row">
+         <!-- Start job -->
+         <div class="row">
             <div class="col-sm">
                 QUALITY MANAGER
             </div>
             <div class="col-sm text-right">
-                2011-2015
+                2013-2015
             </div>
         </div>
         <div class="row">
             <div class="col-sm">
-                IBPL/ L'Oreal <i>[Business process design/ management]</i>
+            L'Oreal <i>[Business process design/ management]</i>
+            </div>
+        </div>
+        <div class="row  border-bottom">
+            <div class="col-sm">
+                <ul>
+                    <li>
+                        Led a cross-functional team of Scientists and Technicians in charge of assurance and control activities across two plants.
+                    </li>
+                    <li>
+                        Performed long-term strategic planning, resource management, performance monitoring, validation/scale up of product launches and quarterly internal audits against ISO 22716
+                    </li>
+                    <li>
+                        Actively participated in Plant Management Committee decisions while personally handling and resolving escalated customer-related issues
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+        <!-- End job -->
+        <!-- Start job -->
+        <div class="row">
+            <div class="col-sm">
+                QUALITY & PROCESS MANAGER
+            </div>
+            <div class="col-sm text-right">
+                2011-2013
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                IBPL<i>[Business process design/ management]</i>
             </div>
         </div>
         <div class="row  border-bottom">
@@ -362,7 +393,7 @@
                 <ul>
                     <li>
                         Established and ensured the attainment of QA compliance targets while leading conformity
-                        efforts with all governmental and ISO standards.
+                        efforts to ISO standards.
                     </li>
                     <li>
                         Defined and developed plant process flows and quality procedures, and set up and
