--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="section">
+                <div id="skills" class="section">
                     <h2 class="section-title">Skills</h2>
                     <div class="skills-category">
                         <h3>Programming & Development</h3>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="section">
+                <div id="education" class="section">
                     <h2 class="section-title">Education</h2>
                     <div class="education-card">
                         <h3 class="education-degree">Master's degree, Chemical & Biological Engineering</h3>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
 
-                <div class="section">
+                <div id="certifications" class="section">
                     <h2 class="section-title">Certifications</h2>
                     <ul class="skills-list">
                         <li>Microsoft Certified Professional: Analyzing Requirements and Defining Solution Architectures
