feat: add projects

--- a/index.html
+++ b/index.html
@@ -267,7 +267,23 @@
 
                 <section id="projects" class="section">
                     <h2 class="section-title">Project Samples</h2>
+                    <div class="project-card">
+                        <h3 class="project-title">Mithril MINT Token</h3>
+                        <p>A frontend application for the MINT Protocol - a single sided liquidity provision protocol
+                        </p>
+                        <p><a href="https://mithril-mint-token.ar.io" target="_blank">View Project:
+                                mithril-mint-token.ar.io</a></p>
+                        <span class="tech-used">React, TypeScript, NextJS, Lua</span>
+                    </div>
 
+                    <div class="project-card">
+                        <h3 class="project-title">Number Always Bigger</h3>
+                        <p>Frontend implementation for NAB - the upwardly stable Floor Adaptive Elastic Stablecoin
+                        </p>
+                        <p><a href="https://number-always-bigger.ar.io" target="_blank">View Project:
+                                number-always-bigger.ar.io</a></p>
+                        <span class="tech-used">React, TypeScript, NextJS, Lua</span>
+                    </div>
                     <div class="project-card">
                         <h3 class="project-title">Blockchain Projects</h3>
                         <span>View code samples at <a href="https://github.com/skyf0xx/"
