--- a/index.html
+++ b/index.html
@@ -264,9 +264,20 @@
                         </ul>
                     </div>
                 </section>
+                <section id="projects" class="section">
+                    <h2 class="section-title">Github Activity</h2>
+                    <div class="project-card">
+                        <h3 class="project-title"></h3>
+                        <img src="https://ghchart.rshah.org/skyf0xx" alt="GitHub Contributions Chart"
+                            style="width: 100%;">
+                    </div>
+                </section>
+
 
                 <section id="projects" class="section">
                     <h2 class="section-title">Project Samples</h2>
+
+
                     <div class="project-card">
                         <h3 class="project-title">Mithril MINT Token</h3>
                         <p>A frontend application for the MINT Protocol - a single sided liquidity provision protocol
