feat: update education

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div id="education" class="section">
                     <h2 class="section-title">Education</h2>
                     <div class="education-card">
-                        <h3 class="education-degree">Master's degree, Chemical & Biological Engineering</h3>
+                        <h3 class="education-degree">Master's degree, Engineering</h3>
                         <p class="school">University at Buffalo (SUNY)</p>
                         <div class="date-location">
                             <span>2004 - 2006</span>
