feat: update looking for

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 class="title">Software Engineer</h2>
                 <p class="tagline">Boosting Reliability | Maximising Productivity | Pioneering System Efficiencies</p>
                 <div class="open-to-work">
-                    <i class="fas fa-briefcase"></i> Open to CTO and Software Engineering roles
+                    <i class="fas fa-briefcase"></i> Open to Software Engineering roles
                 </div>
             </div>
         </header>
